--- a/index.html
+++ b/index.html
@@ -29,26 +29,27 @@
     </div>
 
     <!-- main-container -->
-    <div id="main-container" class="container rounded-lg">
+    <div id="main-container" class="container rounded-lg bg-light">
         <div class="row h-50">
             <!-- timer -->
-            <div id="timer" class="col-md-3">
+            <div class="col-md-3">
+                <h1 id="timer"></h1>
             </div>
             <!-- question -->
             <div id="question-body" class="col-md-9">
-                <h2 id="question-number"></h2><hr>
+                <h2 id="question-number" class="mt-3"></h2><hr>
                 <p id="question" class="m-2 m-auto"></p>
             </div>–
         </div>
         <div class="row h-50">
             <div class="col-md-3">
-                <h2 id="losses-count"></h2>
+                <h3 id="losses-count"></h3>
             </div>
             <div id="answers-body" class="col-md-6 d-none">
-                <button id="answer-a" type="button" class="answers btn btn-outline-dark w-100" answerName="a">Andrew</button><br>
-                <button id="answer-b" type="button" class="answers btn btn-outline-dark w-100" answerName="b">HAHA</button><br>
-                <button id="answer-c" type="button" class="answers btn btn-outline-dark w-100" answerName="c">LUCUS</button><br>
-                <button id="answer-d" type="button" class="answers btn btn-outline-dark w-100" answerName="d">WTY</button>
+                <button id="answer-a" type="button" class="answers btn btn-outline-dark w-100" answerName="a"></button><br>
+                <button id="answer-b" type="button" class="answers btn btn-outline-dark w-100" answerName="b"></button><br>
+                <button id="answer-c" type="button" class="answers btn btn-outline-dark w-100" answerName="c"></button><br>
+                <button id="answer-d" type="button" class="answers btn btn-outline-dark w-100" answerName="d"></button>
             </div>
             <div id="answer-body" class="col-md-6">
                 <h3 id="answer-cg"></h3> 
