--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <div id="main-container" class="container rounded-lg bg-light">
         <div class="row h-50">
             <!-- timer -->
-            <div class="col-md-3">
+            <div class="col-md-3 text-center">
+                <h1 class="mt-3">Timer:</h1>
                 <h1 id="timer"></h1>
             </div>
             <!-- question -->
